style: fix container size and wrap

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,9 +2,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 
   height: auto;
-  width: auto;
   position: relative;
 }
 
